[project]
name = "project113"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.55.0",
    "fastapi>=0.115.13",
    "google-api-python-client>=2.173.0",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "notion-client>=2.4.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]

[tool.uv.workspace]
members = [
    "AgenticAI-PPL",
]
